--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <title>Inversa por Adjunta de Una Matriz (3x3)</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -53,7 +54,10 @@
 <div id="floating-controls">
     <button id="next-step-btn" onclick="nextStep()" style="display:none;">Siguiente Paso ⏭️</button>
 </div>
-
+<footer class="app-footer">
+        <p>By Iván David Montes Arrieta </p>
+        <p>Estudiante de Desarrollo de Software y Aplicativos Móviles.</p>
+    </footer>
 <script src="script.js"></script>
 
 </body>
