--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <button id="next-step-btn" onclick="nextStep()" style="display:none;">Siguiente Paso ⏭️</button>
 </div>
 <footer class="app-footer">
-        <p></p>
+        <p>By IDaMAr</p>
         <p>Estudiante de Desarrollo de Software y Aplicativos Móviles.</p>
     </footer>
 <script src="script.js"></script>
